# Boids

./: CMakeLists.txt  main.cpp
include/: Boid.h  Client.h  Flock.h  NetworkInterface.h  Server.h
src/: Boid.cpp  Client.cpp  Flock.cpp  NetworkInterface.cpp  Server.cpp
